# lithium

./: .gitignore  AGENT.md  Cargo.toml  calendar.go  cli.go  config.go  database.go  date_utils.go  go.mod  go.sum  main.go  styles.go  todos.db  tui.go
api/: Cargo.toml
api-service/: Cargo.toml
api-service/src/: main.rs  todos.rs
api/src/: db_helpers.rs  main.rs  router.rs
cli/: Cargo.toml
cli-ui/: main.ts  main_test.ts
cli/src/: cli.rs  main.rs  todo.rs
rust-cli/src/: main.rs
rust-todo-service/: Cargo.toml
rust-todo-service/src/: db_helpers.rs  main.rs  router.rs
sql/: create_tables.sql  delete_todo.sql  get_all_todos.sql  get_date_todos.sql  get_inbox_todos.sql  get_month_todos.sql  get_range_todos.sql  insert_todo.sql  migrations.sql  schedule_todo.sql  toggle_todo.sql  update_todo.sql
src/: cli.rs  main.rs  todo.rs
todo/: Cargo.toml
todo-service/: Dockerfile  main.ts
todo/src/: db_helpers.rs  lib.rs
web-ui/: Dockerfile
web-ui/routes/: index.tsx
