[package]
name = "rust-todo-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.12"
cuid = "1.3.1"
serde = { version = "1.0.158", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
axum-test-helper = "0.2.0"
