[package]
name = "lithium-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.17"
cuid = "1.3.1"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
todo = { path = "../todo" }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }
serde_json = "1.0.96"
hyper = { version = "0.14.26", features = ["full"] }
tower = "0.4.13"
axum-macros = "0.3.7"

[dev-dependencies]
axum-test-helper = "0.2.0"
