[package]
name = "lithium-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
cuid = "1.3.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
surrealdb = { version = "1.0.0-beta.9" }
tokio = { version = "1.16.1", features = ["macros","rt-multi-thread"] }
todo = { path = "../todo" }

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
