[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuid = "1.3.1"
serde = { version = "1.0.159", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem", "http", "scripting", "kv-rocksdb"] }
